fix: prevent scrollbars caused by moving snowflakes
Thanks to @jacopotediosi for the suggested fix

Closes #1

--- a/octoprint_wrapped/static/pure-snow/pure-snow.css
+++ b/octoprint_wrapped/static/pure-snow/pure-snow.css
@@ -1,3 +1,14 @@
+#snow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    pointer-events: none;
+    z-index: 32767;
+}
+
 .snowflake {
     z-index: 32768;
     position: absolute;
